the great refactoring

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -84,7 +84,7 @@
                     <div class="card-body">
                         <i class="fas fa-truck fa-3x text-primary mb-3"></i>
                         <h4>Free Shipping</h4>
-                        <p>On orders over $50</p>
+                        <p>On orders over 50 DT</p>
                     </div>
                 </div>
             </div>
