--- a/templates/home/about.html.twig
+++ b/templates/home/about.html.twig
@@ -1,62 +1,26 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}About Us - E-Commerce Store{% endblock %}
-
 {% block body %}
-    <div class="row">
-        <div class="col-lg-8 mx-auto">
-            <h1 class="mb-4">About Us</h1>
-            
-            <div class="card mb-4">
-                <div class="card-body">
-                    <h2 class="card-title">Our Story</h2>
-                    <p class="card-text">
-                        E-Commerce Store was founded in 2023 with a simple mission: to provide high-quality products at affordable prices with exceptional customer service. What started as a small online store has grown into a trusted e-commerce platform serving customers worldwide.
-                    </p>
-                    <p class="card-text">
-                        Our journey began when our founder recognized the need for a more customer-focused shopping experience. We've built our business on the foundation of trust, quality, and customer satisfaction.
-                    </p>
-                </div>
-            </div>
-            
-            <div class="card mb-4">
-                <div class="card-body">
-                    <h2 class="card-title">Our Mission</h2>
-                    <p class="card-text">
-                        Our mission is to make quality products accessible to everyone. We believe that shopping should be a pleasant experience, and we strive to make it as easy and enjoyable as possible for our customers.
-                    </p>
-                    <ul>
-                        <li>Provide exceptional customer service</li>
-                        <li>Offer high-quality products at competitive prices</li>
-                        <li>Create a seamless shopping experience</li>
-                        <li>Build long-lasting relationships with our customers</li>
-                    </ul>
-                </div>
-            </div>
-            
-            <div class="card mb-4">
-                <div class="card-body">
-                    <h2 class="card-title">Our Team</h2>
-                    <p class="card-text">
-                        Behind E-Commerce Store is a team of dedicated professionals who are passionate about what they do. From our customer service representatives to our logistics team, everyone is committed to ensuring that you have the best shopping experience.
-                    </p>
-                    <p class="card-text">
-                        We value diversity, creativity, and innovation. Our team is constantly working to improve our platform and expand our product offerings to better serve our customers.
-                    </p>
-                </div>
-            </div>
-            
-            <div class="card">
-                <div class="card-body">
-                    <h2 class="card-title">Our Commitment</h2>
-                    <p class="card-text">
-                        We are committed to sustainability and ethical business practices. We carefully select our suppliers and partners to ensure they share our values and meet our standards for quality and social responsibility.
-                    </p>
-                    <p class="card-text">
-                        Thank you for choosing E-Commerce Store. We appreciate your support and look forward to serving you.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
+<h3>About e-commerce </h3>
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae eaque harum aliquid repellendus exercitationem nihil in animi velit, dolores perferendis expedita! Dicta excepturi mollitia ullam laborum eligendi. Officiis, dolorum dolore.
+    Quaerat illum commodi, ad, voluptatum ab alias veniam omnis minus dicta autem consequatur enim delectus similique amet! Aliquam distinctio maiores, vel cupiditate error architecto quidem itaque voluptates, totam consequuntur omnis.
+    Quisquam id, ex accusamus iusto modi autem quis natus at non corporis, voluptate animi porro quam beatae repellendus alias vero. Delectus et aliquid atque? Rem hic unde minima vel odit?
+    Distinctio suscipit, cupiditate quod ipsa quaerat reprehenderit perspiciatis modi voluptatum ea quis est magnam odio harum aut dignissimos ipsum maiores accusamus soluta eveniet corrupti debitis molestiae in aliquid. Quaerat, esse?
+    Nesciunt ab optio aut! Nisi beatae dolor reprehenderit aspernatur magni, similique quas commodi soluta tenetur voluptates libero fugiat. Repellat culpa suscipit expedita fugit tempora nesciunt eveniet quaerat harum asperiores in.
+</p>
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae eaque harum aliquid repellendus exercitationem nihil in animi velit, dolores perferendis expedita! Dicta excepturi mollitia ullam laborum eligendi. Officiis, dolorum dolore.
+    Quaerat illum commodi, ad, voluptatum ab alias veniam omnis minus dicta autem consequatur enim delectus similique amet! Aliquam distinctio maiores, vel cupiditate error architecto quidem itaque voluptates, totam consequuntur omnis.
+    Quisquam id, ex accusamus iusto modi autem quis natus at non corporis, voluptate animi porro quam beatae repellendus alias vero. Delectus et aliquid atque? Rem hic unde minima vel odit?
+    Distinctio suscipit, cupiditate quod ipsa quaerat reprehenderit perspiciatis modi voluptatum ea quis est magnam odio harum aut dignissimos ipsum maiores accusamus soluta eveniet corrupti debitis molestiae in aliquid. Quaerat, esse?
+    Nesciunt ab optio aut! Nisi beatae dolor reprehenderit aspernatur magni, similique quas commodi soluta tenetur voluptates libero fugiat. Repellat culpa suscipit expedita fugit tempora nesciunt eveniet quaerat harum asperiores in.
+</p>
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae eaque harum aliquid repellendus exercitationem nihil in animi velit, dolores perferendis expedita! Dicta excepturi mollitia ullam laborum eligendi. Officiis, dolorum dolore.
+    Quaerat illum commodi, ad, voluptatum ab alias veniam omnis minus dicta autem consequatur enim delectus similique amet! Aliquam distinctio maiores, vel cupiditate error architecto quidem itaque voluptates, totam consequuntur omnis.
+    Quisquam id, ex accusamus iusto modi autem quis natus at non corporis, voluptate animi porro quam beatae repellendus alias vero. Delectus et aliquid atque? Rem hic unde minima vel odit?
+    Distinctio suscipit, cupiditate quod ipsa quaerat reprehenderit perspiciatis modi voluptatum ea quis est magnam odio harum aut dignissimos ipsum maiores accusamus soluta eveniet corrupti debitis molestiae in aliquid. Quaerat, esse?
+    Nesciunt ab optio aut! Nisi beatae dolor reprehenderit aspernatur magni, similique quas commodi soluta tenetur voluptates libero fugiat. Repellat culpa suscipit expedita fugit tempora nesciunt eveniet quaerat harum asperiores in.
+</p>
 {% endblock %}
