--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -1,16 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ProductController!{% endblock %}
+{% block title %}Nos produits{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>THIS IS UNIMPLEMENTED</h1>
-
-    
+<div class="row">
+    <div class="col-md-3">
+        <h3 class="text-center">Rechercher</h3>
+        {{ form(form) }}
+    </div>
+    <div class="col-md-9">
+            <h3 class="text-center">Nos Produits</h3>
+        <div class="row">
+            {% for product in products %}
+                <div class="col-md-4">
+                    <div class="product-item">
+                        <a href="{{ path('product_show', {slug: product.slug}) }}"><img class="img-fluid" src="/uploads/{{product.image}}" alt="{{product.name}}"></a>
+                        <h5 class="mt-2">{{ product.name}}</h5>
+                        <span class="product-subtitle text-center">{{product.subtitle}}</span>
+                        <span class="product-price text-center">{{(product.price / 100 )|number_format(2,',', '.')}} DT </span>
+                    </div>
+                </div>
+            {% endfor %}
+        </div> 
+    </div>
 </div>
+  
 {% endblock %}
